--- a/src/Index.html
+++ b/src/Index.html
@@ -9,24 +9,18 @@
     <link rel="stylesheet" href="plugin/css/bootstrap.min.css">
     <link rel="stylesheet" media="screen and (max-device-width:1200px)" href="plugin/css/mobileReset.css">
     <link rel="stylesheet" media="screen and (min-device-width:1200px)" type="text/css" href="plugin/css/reset.css" />
-    <link rel="stylesheet" href="plugin/css/common.css">
+    <link rel="stylesheet" media="screen and (max-device-width:1200px)" href="plugin/css/mobileCommon.css">
+    <link rel="stylesheet" media="screen and (min-device-width:1200px)" href="plugin/css/common.css">
     <link rel="stylesheet" href="plugin/fonts/iconfont.css">
-    <link rel="stylesheet" href="plugin/css/mislider.css">
-    <link rel="stylesheet" href="plugin/css/mislider-skin-cameo.css">
+    <link rel="stylesheet" media="screen and (min-device-width:1200px)" href="plugin/css/mislider.css">
+    <link rel="stylesheet" media="screen and (min-device-width:1200px)" href="plugin/css/mislider-skin-cameo.css">
     <link rel="stylesheet" href="plugin/css/lyz.calendar.css">
     <link rel="stylesheet" media="screen and (max-device-width:1200px)" type="text/css" href="styles/mobileIndex.css" />
     <link rel="stylesheet" media="screen and (min-device-width:1200px)" type="text/css" href="styles/Index.css" />
 </head>
 
 <body>
-    <div class="move">
-        <div class="logo">
-            <img src="./images/logo.png" alt="">
-        </div>
-        <button></button>
-    </div>
-    <!-- <div class="head_top visible-lg" id='top'></div> -->
-    <div class="header "></div>
+    <div class="header " id='top'></div>
     <!-- 广告图部分 -->
     <div class="banner ">
         <!-- <img src="images/swiperbanner.png" alt=""> -->
@@ -116,84 +110,84 @@
     <div class="serve-box   w">
         <div class="serve">
             <div class="row">
-                <div class="col-lg-2 action">
+                <div class="col-lg-2  col-xs-3	col-sm-3 col-md-3 action">
                     <a href="#">
                         <img src="images/default/Self-borrowing.png" alt="">
                         <img src="images/choose/Self-borrowingC.png" alt="">
                         <p>借阅服务</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/subscribe.png" alt="">
                         <img src="images/choose/subscribeC.png" alt="">
                         <p>预约服务</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/subject.png" alt="">
                         <img src="images/choose/subjectC.png" alt="">
                         <p>学科服务</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/cards.png" alt="">
                         <img src="images/choose/cardsC.png" alt="">
                         <p>证卡服务</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/document delivery.png" alt="">
                         <img src="images/choose/document deliveryC.png" alt="">
                         <p>文献传递</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/sci-tech.png" alt="">
                         <img src="images/choose/sci-techC.png" alt="">
                         <p>科技查新</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/Resource.png" alt="">
                         <img src="images/choose/Resource.png" alt="">
                         <p>资源荐购</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/Micro fabric.png" alt="">
                         <img src="images/choose/Micro fabricC.png" alt="">
                         <p>小布微课</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/donate.png" alt="">
                         <img src="images/choose/donateC.png" alt="">
                         <p>捐赠</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/lostfound.png" alt="">
                         <img src="images/choose/lostfoundC.png" alt="">
                         <p>失物招领</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <img src="images/default/consult.png" alt="">
                         <img src="images/choose/consultC.png" alt="">
                         <p>咨询服务</p>
                     </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
                     <a href="#">
                         <span>更多</span>
                         <p>...</p>
@@ -295,7 +289,6 @@
                                     <!-- 接入jQuery时间控件 -->
                                     <div class="fr timedate">
                                         <input id="txtEndDate" class="datepicker" placeholder="选择时间" style="width:170px;padding:7px 10px;border:1px solid #ccc;" />
-                                        <!-- <input type="text" > -->
                                     </div>
                                 </div>
                                 <div class="news_foot">
@@ -334,7 +327,7 @@
                 </li>
                 <li class="serve-item">
                     <p class="iconfont icon-boshihouchuzhanshenqing-copy">博生</p>
-                    <div class="hotserve-wailian">
+                    <div class="serve-wailian">
                         <ul class="fl">
                             <li><a href="#"> 阅读推荐</a></li>
                             <li><a href="#"> 借阅服务</a></li>
@@ -354,7 +347,7 @@
                 </li>
                 <li class="serve-item">
                     <p class="iconfont icon-jiaoshi-copy">教职工</p>
-                    <div class="hotserve-wailian">
+                    <div class="serve-wailian">
                         <ul class="fl">
                             <li><a href="#">学科服务平台</a></li>
                             <li><a href="#">文献传递</a></li>
@@ -375,7 +368,7 @@
                 </li>
                 <li class="serve-item">
                     <p class="iconfont icon-xiaoyouxitong-copy-copy">校友</p>
-                    <div class="hotserve-wailian">
+                    <div class="serve-wailian">
                         <ul class="fl">
                             <li><a href="#"> 武大名师库</a></li>
                             <li><a href="#"> 武大文库</a></li>
@@ -537,40 +530,41 @@
         <div class="special-box">
             <ul class="clearfix">
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""> <span>武汉大学文库</span> </a>
+
+                    <a href="#">
+                        <div class="shade"></div>
+                        <img src="images/books/book (1).png" alt="">
+                        <span>武汉大学文库</span> </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
+                    <a href="#">
+                        <div class="shade"></div><img src="images/books/book (2).png" alt=""><span>武汉大学名师库</span></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
+                    <a href="#">
+                        <div class="shade"></div><img src="images/books/book (3).png" alt=""><span>特色资源数据库</span></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
+                    <a href="#">
+                        <div class="shade"></div><img src="images/books/book (4).png" alt=""><span>
+                            武汉大学CADAL民国珍藏库
+                        </span></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
+                    <a href="#">
+                        <div class="shade"></div><img src="images/books/book (5).png" alt=""><span>武汉大学文库</span></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
+                    <a href="#">
+                        <div class="shade"></div><img src="images/books/book (6).png" alt=""><span>武汉大学文库</span></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
+                    <a href="#">
+                        <div class="shade"></div><img src="images/books/book (7).png" alt=""><span>武汉大学文库</span></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/specialresource.png" alt=""><span>武汉大学文库</span></a>
+                    <a href="#">
+                        <div class="shade"></div><img src="images/books/book (8).png" alt=""><span>武汉大学文库</span></a>
                 </li>
             </ul>
         </div>
@@ -579,7 +573,7 @@
     <div class="reader  w" id='read'>
         <div class="reader-title">阅读推荐</div>
         <div class="reader-tab">
-            <div>
+            <div class="navCenter">
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active"><a href="#newbook" aria-controls="newbook" role="tab" data-toggle="tab">新书通报</a></li>
@@ -672,18 +666,7 @@
                                                 </figure>
                                             </a>
                                         </li>
-                                        <li class="mis-slide">
-                                            <a href="#" class="mis-container">
-                                                <figure>
-                                                    <img src="images/legend-7.jpg" alt="Lilly with Bee">
-                                                    <figcaption>
-                                                        <h4>心理营养</h4>
-                                                        <p>作者：成果</p>
-                                                        <p>浏览次数：117</p>
-                                                    </figcaption>
-                                                </figure>
-                                            </a>
-                                        </li>
+
                                     </ol>
                                 </div>
                             </figure>
@@ -697,6 +680,7 @@
         </div>
     </div>
     <div class="footer"></div>
+    <div class="mobile">武汉大学图书馆 Copyright©2018 鄂ICP备09008577号-19</div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="plugin/js/lyz.calendar.min.js"></script>
@@ -705,20 +689,24 @@
 
     <script type="text/javascript">
         $(function() {
-            (function() {
-                if (window.screen.width < 1200) {
-                    loadJs('js/rem.js')
-                }
-            })()
-
-            function loadJs(src) {
-                var head = document.getElementsByTagName('head')[0];
-                var s = document.createElement("script");
-                s.type = "text/javascript";
-                s.src = src;
-                head.appendChild(s);
-            }
             $(document).ready(function() {
+                //根据屏幕大小加载不同的js文件
+                (function() {
+                    if (window.screen.width < 1200) {
+                        loadJs('js/rem.js')
+                        loadJs('js/mobileIndex.js')
+                    } else {
+                        loadJs('js/index.js')
+                    }
+                })()
+
+                function loadJs(src) {
+                    var head = document.getElementsByTagName('head')[0];
+                    var s = document.createElement("script");
+                    s.type = "text/javascript";
+                    s.src = src;
+                    head.appendChild(s);
+                }
                 //jquery load方法加载公共头部
                 $(".header").load("header.html", function() { //加载完成后设置高亮
                     // $("#navigation_1").attr("style", "color: red");
@@ -726,39 +714,13 @@
                 });
                 $(".footer").load("footer.html");
             });
-            $('.banner-mao').on('click', 'li', function() {
-                $(this).addClass('now')
-                $(this).siblings().removeClass('now')
-            })
+            //服务模块
             $('.serve > .row').on('click', 'div', function() {
                     $(this).addClass('action')
                     $(this).siblings().removeClass('action')
                 })
-                //搜索栏运行
-                /*----------------------------------
-                        点击展开移出区域隐藏列表
-                  ----------------------------------*/
-                //外层select框
-            var oDropDown = $('.select');
-            //选择列表项
-            var oChangeA = $('.listA');
-            oDropDown.click(function() {
-                $(this).find('.selectList').toggle().siblings('.xl-icon').toggleClass('sq-icon');
-            });
-
-            oDropDown.mouseleave(function() {
-                $(this).find('.selectList').hide().siblings('.xl-icon').removeClass('sq-icon');
-            });
-
-            oChangeA.click(function() {
-                var oVal = $(this).text();
-                $(this).parents('.listA-all').parents('.selectList').siblings('.selectVal').text(oVal).siblings('.xl-icon').toggleClass('sq-icon');
-            });
-
-            function search() {
-                console.log(22222)
-            }
-            //时间控件
+                //时间插件
+                //时间控件
             $("#txtEndDate").calendar({
 
                 controlId: "divDate", // 弹出的日期控件ID，默认: $(this).attr("id") + "Calendar"
@@ -775,31 +737,9 @@
 
                 callback: function() { // 点击选择日期后的回调函数
 
-                    // alert("您选择的日期是：" + $("#txtEndDate").val());
-
                 }
             });
 
-            //书本轮播组件
-            var slider = $('.mis-stage').miSlider({
-                //  The height of the stage in px. Options: false or positive integer. false = height is calculated using maximum slide heights. Default: false
-                stageHeight: 330,
-                //  Number of slides visible at one time. Options: false or positive integer. false = Fit as many as possible.  Default: 1
-                slidesOnStage: false,
-                //  The location of the current slide on the stage. Options: 'left', 'right', 'center'. Defualt: 'left'
-                slidePosition: 'center',
-                //  The slide to start on. Options: 'beg', 'mid', 'end' or slide number starting at 1 - '1','2','3', etc. Defualt: 'beg'
-                slideStart: 'mid',
-                //  The relative percentage scaling factor of the current slide - other slides are scaled down. Options: positive number 100 or higher. 100 = No scaling. Defualt: 100
-                slideScaling: 150,
-                //  The vertical offset of the slide center as a percentage of slide height. Options:  positive or negative number. Neg value = up. Pos value = down. 0 = No offset. Default: 0
-                offsetV: -5,
-                //  Center slide contents vertically - Boolean. Default: false
-                centerV: true,
-                //  Opacity of the prev and next button navigation when not transitioning. Options: Number between 0 and 1. 0 (transparent) - 1 (opaque). Default: .5
-                navButtonsOpacity: 1,
-                navButtonsShow: true,
-            });
         })
     </script>
 </body>
