--- a/src/header.html
+++ b/src/header.html
@@ -1,21 +1,24 @@
-<div style="width: 100%;background:rgba(246,246,246,1);:">
+<div class="top_note">
     <div class="clearfix top_head w ">
         <ul class="clearfix fr ">
-            <li class="fl"><a href="#">相关链接</a></li>
-            <li class="fl"><a href="#">旧版入口</a></li>
-            <li class="fl"><a href="#">工作网</a></li>
-            <li class="fl"><a href="#">English</a></li>
+            <li><a href="#">相关链接</a></li>
+            <li><a href="#">旧版入口</a></li>
+            <li><a href="#">工作网</a></li>
+            <li><a href="#">English</a></li>
         </ul>
     </div>
 </div>
-<div class="clearfix w  logo"><img src="images/logo.png">
+<div class="clearfix w  logo">
+    <img src="images/logo.png">
+    <!-- <img src="images/logo.png" alt=""> -->
+    <button></button>
     <div class="login fr">登录我的图书馆</div>
     <ul class="clearfix fr">
-        <li class="fl" id="navigation_6"><a href="#">阅读与活动</a></li>
-        <li class="fl" id="navigation_5"><a href="#">科研支持</a></li>
-        <li class="fl" id="navigation_4"><a href="#">学习支持</a></li>
-        <li class="fl" id="navigation_3"><a href="news.html">借阅服务</a></li>
-        <li class="fl activing" id="navigation_2"><a href="mylibray.html">资源</a></li>
-        <li class="fl" id="navigation_1"><a href="Index.html">概况</a></li>
+        <li id="navigation_1"><a href="Index.html">概况</a></li>
+        <li class=" activing" id="navigation_2"><a href="mylibray.html">资源</a></li>
+        <li id="navigation_3"><a href="news.html">借阅服务</a></li>
+        <li id="navigation_4"><a href="#">学习支持</a></li>
+        <li id="navigation_5"><a href="#">科研支持</a></li>
+        <li id="navigation_6"><a href="#">阅读与活动</a></li>
     </ul>
 </div>
