--- a/src/footer.html
+++ b/src/footer.html
@@ -1,13 +1,13 @@
 <div class="w">
     <ul class="clearfix">
-        <li class="fl"><img src="images/logo.png"></li>
-        <li class="fr"><img src="images/erweima.png">
+        <li class="fl"><img src="images/logo2.png"></li>
+        <li class="fr"><img src="images/weixin.png">
             <p>微信公众号</p>
         </li>
-        <li class="fr"><img src="images/erweima.png">
+        <li class="fr"><img src="images/weibo.png">
             <p>关注微博</p>
         </li>
-        <li class="fr"><img src="images/erweima.png">
+        <li class="fr"><img src="images/yidong.png">
             <p>移动图书馆</p>
         </li>
     </ul>
