--- a/src/newsDetail.html
+++ b/src/newsDetail.html
@@ -36,14 +36,14 @@
 
             </div>
             <div class="titleContent fl">
-                <div class="titleSearch">
+                <!-- <div class="titleSearch">
                     <div class="search clearfix">
                         <div class="select fl">
-                            <!--存放选择的值-->
+                            存放选择的值
                             <span class="selectVal" onselectstart="return false">全面搜索</span>
-                            <!--放置icon-->
+                            放置icon
                             <i class="xl-icon"></i>
-                            <!--选择项-->
+                            选择项
                             <div class="selectList">
                                 <div class="listA-all">
                                     <a href="javascript:;" class="listA">全面搜索</a>
@@ -56,7 +56,7 @@
                         </div>
                         <div class="search_box fl"><i class="iconfont icon-sousuo"></i><input type="text" placeholder="请输入关键词"><span> 查询</span></div>
                     </div>
-                </div>
+                </div> -->
                 <div class="titleList">
                     <div class="list_top">新闻中心</div>
                     <div class="list_body">
