--- a/src/Index.html
+++ b/src/Index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>武汉大学图书馆</title>
     <link rel="stylesheet" href="plugin/css/bootstrap.min.css">
+    <link rel="stylesheet" media="screen and (max-device-width:1200px)" href="plugin/css/mobile-bootstrap-datetimerpicker.min.css">
+    <link rel="stylesheet" media="screen and (min-device-width:1200px)" href="plugin/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" media="screen and (max-device-width:1200px)" href="plugin/css/mobileReset.css">
     <link rel="stylesheet" media="screen and (min-device-width:1200px)" type="text/css" href="plugin/css/reset.css" />
     <link rel="stylesheet" media="screen and (max-device-width:1200px)" href="plugin/css/mobileCommon.css">
@@ -14,7 +16,6 @@
     <link rel="stylesheet" href="plugin/fonts/iconfont.css">
     <link rel="stylesheet" media="screen and (min-device-width:1200px)" href="plugin/css/mislider.css">
     <link rel="stylesheet" media="screen and (min-device-width:1200px)" href="plugin/css/mislider-skin-cameo.css">
-    <link rel="stylesheet" href="plugin/css/lyz.calendar.css">
     <link rel="stylesheet" media="screen and (max-device-width:1200px)" type="text/css" href="styles/mobileIndex.css" />
     <link rel="stylesheet" media="screen and (min-device-width:1200px)" type="text/css" href="styles/Index.css" />
 </head>
@@ -280,6 +281,8 @@
                             <div>
                                 <div class="news_top clearfix">
                                     <ul class="clearfix fl ">
+                                        <li>1</li>
+                                        <li>2</li>
                                         <li>3</li>
                                         <li>4</li>
                                         <li>5</li>
@@ -287,8 +290,19 @@
                                         <li>7</li>
                                     </ul>
                                     <!-- 接入jQuery时间控件 -->
-                                    <div class="fr timedate">
-                                        <input id="txtEndDate" class="datepicker" placeholder="选择时间" style="width:170px;padding:7px 10px;border:1px solid #ccc;" />
+                                    <div class=" fr container">
+                                        <form action="" class="form-horizontal" role="form">
+                                            <fieldset>
+
+                                                <div class="input-group date form_date " data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
+                                                    <input class="form-control" size="16" type="text" value="" readonly placeholder="选择日期">
+                                                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                                                </div>
+                                                <input type="hidden" id="dtp_input2" value="" /><br/>
+
+                                            </fieldset>
+                                        </form>
                                     </div>
                                 </div>
                                 <div class="news_foot">
@@ -683,7 +697,8 @@
     <div class="mobile">武汉大学图书馆 Copyright©2018 鄂ICP备09008577号-19</div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="plugin/js/lyz.calendar.min.js"></script>
+    <script src="plugin/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="plugin/js/bootstrap-datetimepicker.zh-CN.js"></script>
     <script type="text/javascript" src="plugin/js/modernizr-custom.js"></script>
     <script src="plugin/js/mislider.js"></script>
 
@@ -720,25 +735,23 @@
                     $(this).siblings().removeClass('action')
                 })
                 //时间插件
-                //时间控件
-            $("#txtEndDate").calendar({
+            $('.form_date').datetimepicker({
+                language: 'zh-CN',
+                weekStart: 1,
+                todayBtn: 1,
+                showClear: true,
+                autoclose: 1,
+                todayHighlight: 1,
+                startView: 2,
+                minView: 2,
+                forceParse: 0,
+                clearBtn: false,
+            }).on("changeDate", function() {
 
-                controlId: "divDate", // 弹出的日期控件ID，默认: $(this).attr("id") + "Calendar"
+                if ($("#dtp_input2").val() != "")
+                    console.log($("#dtp_input2").val())
+            })
 
-                speed: 200, // 三种预定速度之一的字符串("slow", "normal", or "fast")或表示动画时长的毫秒数值(如：1000),默认：200
-
-                complement: true, // 是否显示日期或年空白处的前后月的补充,默认：true
-
-                readonly: true, // 目标对象是否设为只读，默认：true
-
-                // upperLimit: new Date(), // 日期上限，默认：NaN(不限制)
-
-                lowerLimit: new Date("2011/01/01"), // 日期下限，默认：NaN(不限制)
-
-                callback: function() { // 点击选择日期后的回调函数
-
-                }
-            });
 
         })
     </script>
