--- a/src/header.html
+++ b/src/header.html
@@ -9,8 +9,8 @@
     </div>
 </div>
 <div class="clearfix w  logo">
-    <img src="images/logo.png">
-    <!-- <img src="images/logo.png" alt=""> -->
+    <img src="images/logo.png" class="pcLogo">
+    <img src="images/logo2.png" alt="" class="moveLogo">
     <button></button>
     <div class="login fr">登录我的图书馆</div>
     <ul class="clearfix fr">
